# malhound

./: .gitignore  CHANGELOG.md  LICENSE  README.md  folders_description.md  manifest.in  pyproject.toml  requirements.txt  setup.cfg
src/MalHound/: __init__.py  interface.py  main.py  processor.py
