[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MalHound"
version = "0.0.1"
authors = [
    { name = "shalabycr7", email = "abdoshalaby.dev@gmail.com" },
]
description = "MalHound is a null-bytes removal tool for executables"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ttkbootstrap>=1.10.1",
    "pefile>=2023.2.7"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shalabycr7/MalHound"
"Bug Tracker" = "https://github.com/shalabycr7/MalHound/issues"


[project.scripts]
MalHound = "MalHound.main:main"
MalHound-gui = "MalHound.interface:main"