[metadata]
name = MalHound
version = 0.0.1
author = shalabycr7
author_email = abdoshalaby.dev@gmail.com
description = MalHound is a null-bytes removal tool for executables
long_description = file: README.md, CHANGELOG.md, LICENSE
classifiers =
    Framework :: Tkinter
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
include =
    MalHound
    MalHound.icons

